--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -18,7 +18,7 @@
   </div>
 <% else %>
   <div class="center hero-unit">
-    <h1>Welcome to the Home App</h1>
+    <h1>Welcome to the <%= ENV['APP_NAME'] || 'Test' %> App</h1>
 
     <h2>
       This is the home page for the
